MiCompiladorParser.py
# Generated from MiCompilador.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiCompiladorParser ( Parser ):

    grammarFileName = "MiCompilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "';'", "'.'", "'VAR'", "':'", 
                     "'FUNCTION'", "'VOID'", "'('", "')'", "','", "'INTEGER'", 
                     "'REAL'", "'BOOLEAN'", "'STRING'", "'BEGIN'", "'END'", 
                     "':='", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", 
                     "'RETURN'", "'PRINTLN'", "'READLN'", "'TRUE'", "'FALSE'", 
                     "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'OR'", "'*'", "'/'", "'AND'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING_CONST", "BOOL", "ID", "INT", "FLOAT", "WS" ]

    RULE_programa = 0
    RULE_bloque = 1
    RULE_declaraciones = 2
    RULE_declaracion = 3
    RULE_var_declaracion = 4
    RULE_funcion_declaracion = 5
    RULE_lista_parametros = 6
    RULE_parametro = 7
    RULE_tipo = 8
    RULE_compound_statement = 9
    RULE_lista_sentencias = 10
    RULE_sentencia = 11
    RULE_asignacion = 12
    RULE_sentencia_if = 13
    RULE_sentencia_while = 14
    RULE_llamada_procedimiento = 15
    RULE_lista_argumentos = 16
    RULE_sentencia_return = 17
    RULE_sentencia_io = 18
    RULE_expresion = 19
    RULE_expresion_simple = 20
    RULE_termino = 21
    RULE_factor = 22
    RULE_booleano = 23
    RULE_operador_relacional = 24
    RULE_operador_aditivo = 25
    RULE_operador_multiplicativo = 26

    ruleNames =  [ "programa", "bloque", "declaraciones", "declaracion", 
                   "var_declaracion", "funcion_declaracion", "lista_parametros", 
                   "parametro", "tipo", "compound_statement", "lista_sentencias", 
                   "sentencia", "asignacion", "sentencia_if", "sentencia_while", 
                   "llamada_procedimiento", "lista_argumentos", "sentencia_return", 
                   "sentencia_io", "expresion", "expresion_simple", "termino", 
                   "factor", "booleano", "operador_relacional", "operador_aditivo", 
                   "operador_multiplicativo" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    STRING_CONST=40
    BOOL=41
    ID=42
    INT=43
    FLOAT=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiCompiladorParser.ID, 0)

        def bloque(self):
            return self.getTypedRuleContext(MiCompiladorParser.BloqueContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MiCompiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(MiCompiladorParser.T__0)
            self.state = 55
            self.match(MiCompiladorParser.ID)
            self.state = 56
            self.match(MiCompiladorParser.T__1)
            self.state = 57
            self.bloque()
            self.state = 58
            self.match(MiCompiladorParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_statement(self):
            return self.getTypedRuleContext(MiCompiladorParser.Compound_statementContext,0)


        def declaraciones(self):
            return self.getTypedRuleContext(MiCompiladorParser.DeclaracionesContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = MiCompiladorParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4 or _la==6:
                self.state = 60
                self.declaraciones()


            self.state = 63
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiCompiladorParser.DeclaracionContext)
            else:
                return self.getTypedRuleContext(MiCompiladorParser.DeclaracionContext,i)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_declaraciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraciones" ):
                listener.enterDeclaraciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraciones" ):
                listener.exitDeclaraciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraciones" ):
                return visitor.visitDeclaraciones(self)
            else:
                return visitor.visitChildren(self)




    def declaraciones(self):

        localctx = MiCompiladorParser.DeclaracionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaraciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 65
                self.declaracion()
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4 or _la==6):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaracion(self):
            return self.getTypedRuleContext(MiCompiladorParser.Var_declaracionContext,0)


        def funcion_declaracion(self):
            return self.getTypedRuleContext(MiCompiladorParser.Funcion_declaracionContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = MiCompiladorParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.var_declaracion()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.funcion_declaracion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiCompiladorParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(MiCompiladorParser.TipoContext,0)


        def var_declaracion(self):
            return self.getTypedRuleContext(MiCompiladorParser.Var_declaracionContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_var_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaracion" ):
                listener.enterVar_declaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaracion" ):
                listener.exitVar_declaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaracion" ):
                return visitor.visitVar_declaracion(self)
            else:
                return visitor.visitChildren(self)




    def var_declaracion(self):

        localctx = MiCompiladorParser.Var_declaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MiCompiladorParser.T__3)
            self.state = 75
            self.match(MiCompiladorParser.ID)
            self.state = 76
            self.match(MiCompiladorParser.T__4)
            self.state = 77
            self.tipo()
            self.state = 78
            self.match(MiCompiladorParser.T__1)
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 79
                self.var_declaracion()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcion_declaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiCompiladorParser.ID, 0)

        def bloque(self):
            return self.getTypedRuleContext(MiCompiladorParser.BloqueContext,0)


        def lista_parametros(self):
            return self.getTypedRuleContext(MiCompiladorParser.Lista_parametrosContext,0)


        def tipo(self):
            return self.getTypedRuleContext(MiCompiladorParser.TipoContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_funcion_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion_declaracion" ):
                listener.enterFuncion_declaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion_declaracion" ):
                listener.exitFuncion_declaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion_declaracion" ):
                return visitor.visitFuncion_declaracion(self)
            else:
                return visitor.visitChildren(self)




    def funcion_declaracion(self):

        localctx = MiCompiladorParser.Funcion_declaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcion_declaracion)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(MiCompiladorParser.T__5)
                self.state = 83
                self.match(MiCompiladorParser.T__6)
                self.state = 84
                self.match(MiCompiladorParser.ID)
                self.state = 85
                self.match(MiCompiladorParser.T__7)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 86
                    self.lista_parametros()


                self.state = 89
                self.match(MiCompiladorParser.T__8)
                self.state = 90
                self.match(MiCompiladorParser.T__1)
                self.state = 91
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(MiCompiladorParser.T__5)
                self.state = 93
                self.tipo()
                self.state = 94
                self.match(MiCompiladorParser.ID)
                self.state = 95
                self.match(MiCompiladorParser.T__7)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 96
                    self.lista_parametros()


                self.state = 99
                self.match(MiCompiladorParser.T__8)
                self.state = 100
                self.match(MiCompiladorParser.T__1)
                self.state = 101
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_parametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiCompiladorParser.ParametroContext)
            else:
                return self.getTypedRuleContext(MiCompiladorParser.ParametroContext,i)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_lista_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_parametros" ):
                listener.enterLista_parametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_parametros" ):
                listener.exitLista_parametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_parametros" ):
                return visitor.visitLista_parametros(self)
            else:
                return visitor.visitChildren(self)




    def lista_parametros(self):

        localctx = MiCompiladorParser.Lista_parametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lista_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.parametro()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 106
                self.match(MiCompiladorParser.T__9)
                self.state = 107
                self.parametro()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiCompiladorParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(MiCompiladorParser.TipoContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = MiCompiladorParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MiCompiladorParser.ID)
            self.state = 114
            self.match(MiCompiladorParser.T__4)
            self.state = 115
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MiCompiladorParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30720) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_sentencias(self):
            return self.getTypedRuleContext(MiCompiladorParser.Lista_sentenciasContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = MiCompiladorParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compound_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MiCompiladorParser.T__14)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4398107623424) != 0):
                self.state = 120
                self.lista_sentencias()


            self.state = 123
            self.match(MiCompiladorParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lista_sentenciasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiCompiladorParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiCompiladorParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_lista_sentencias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_sentencias" ):
                listener.enterLista_sentencias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_sentencias" ):
                listener.exitLista_sentencias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLista_sentencias" ):
                return visitor.visitLista_sentencias(self)
            else:
                return visitor.visitChildren(self)




    def lista_sentencias(self):

        localctx = MiCompiladorParser.Lista_sentenciasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lista_sentencias)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.sentencia()
            self.state = 130
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 126
                    self.match(MiCompiladorParser.T__1)
                    self.state = 127
                    self.sentencia() 
                self.state = 132
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 133
                self.match(MiCompiladorParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(MiCompiladorParser.AsignacionContext,0)


        def sentencia_if(self):
            return self.getTypedRuleContext(MiCompiladorParser.Sentencia_ifContext,0)


        def sentencia_while(self):
            return self.getTypedRuleContext(MiCompiladorParser.Sentencia_whileContext,0)


        def llamada_procedimiento(self):
            return self.getTypedRuleContext(MiCompiladorParser.Llamada_procedimientoContext,0)


        def sentencia_io(self):
            return self.getTypedRuleContext(MiCompiladorParser.Sentencia_ioContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(MiCompiladorParser.Compound_statementContext,0)


        def sentencia_return(self):
            return self.getTypedRuleContext(MiCompiladorParser.Sentencia_returnContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = MiCompiladorParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sentencia)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.sentencia_if()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.sentencia_while()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.llamada_procedimiento()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.sentencia_io()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.compound_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.sentencia_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiCompiladorParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiCompiladorParser.ExpresionContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = MiCompiladorParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MiCompiladorParser.ID)
            self.state = 146
            self.match(MiCompiladorParser.T__16)
            self.state = 147
            self.expresion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(MiCompiladorParser.ExpresionContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiCompiladorParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(MiCompiladorParser.SentenciaContext,i)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_sentencia_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_if" ):
                listener.enterSentencia_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia_if" ):
                listener.exitSentencia_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia_if" ):
                return visitor.visitSentencia_if(self)
            else:
                return visitor.visitChildren(self)




    def sentencia_if(self):

        localctx = MiCompiladorParser.Sentencia_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sentencia_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MiCompiladorParser.T__17)
            self.state = 150
            self.expresion()
            self.state = 151
            self.match(MiCompiladorParser.T__18)
            self.state = 152
            self.sentencia()
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 153
                self.match(MiCompiladorParser.T__19)
                self.state = 154
                self.sentencia()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentencia_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(MiCompiladorParser.ExpresionContext,0)


        def sentencia(self):
            return self.getTypedRuleContext(MiCompiladorParser.SentenciaContext,0)


        def getRuleIndex(self):
            return MiCompiladorParser.RULE_sentencia_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia_while" ):
                listener.enterSentencia_while(self)
